# flamai-svc-talking-avatar-audio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  runpod_app.py
.docker/: Dockerfile.cpu
src/api/: handlers.py  models.py  routes.py
src/core/: managers.py  process_manager.py  server_manager.py
src/services/: tts_service.py
src/utils/config/: config.yaml  settings.py
src/utils/resources/: file_cleanup.py  gcp_bucket_manager.py  logger.py
tests/: conftest.py  test_api.py
